--- a/boilerplate.ipynb
+++ b/boilerplate.ipynb
@@ -145,9 +145,7 @@
     "\n",
     "DIR_HOME = os.environ['HOME']\n",
     "DIR_REPOS = DIR_HOME + \"/repos\"\n",
-    "DIR_BMLSP = DIR_REPOS + \"/luispedro/BuildingMachineLearningSystemsWithPython\"\n",
-    "DIR_OLA_DATA = DIR_HOME + \"/ola-data\"\n",
-    "fo_data = DIR_OLA_DATA + \"/driver-churn/qubole\""
+    "DIR_BMLSP = DIR_REPOS + \"/luispedro/BuildingMachineLearningSystemsWithPython\"\n"
    ]
   },
   {
